app/styles/Profile.css
/*
 3px  =   .1875rem
 4px  =   .25rem
 5px  =   .3125rem
 6px  =   .375rem
 7px  =   .4375rem
 8px  =   .5rem
 9px  =   .5625rem
10px  =   .625rem
11px  =   .6875rem
12px  =   .75rem
13px  =   .8125rem
14px  =   .875rem    /* font base
15px  =   .9375rem
16px  =  1rem        /* base
18px  =  1.125rem
20px  =  1.25rem
22px  =  1.375rem
24px  =  1.5rem
26px  =  1.625rem
28px  =  1.75rem
30px  =  1.875rem
32px  =  2rem
34px  =  2.125rem
36px  =  2.25rem
*/

/* UNKNOWN STYLES ///////////////////////////////////// */
h4.headspace, h5.headspace {
  margin-bottom: 50px;
}
.bookmarks-temp > a.list-group-item:focus, .bookmarks-temp > a.list-group-item:hover {
  background-color: #23262a;
  color: #e6e6e6!important;
}
.btn-pro-edit {
  margin-top: 15px;
  padding: 0.8125rem 1.25rem;
  width: 258px;
  border: 1px solid #4a90e2;
  background-color: #4a90e2;
  color: #ffffff;
  text-transform: uppercase;
  letter-spacing: 1px;
  font-weight: 700;
  font-size: 11px;
}
.btn-pro-edit:hover, .btn-pro-edit:active, .btn-pro-edit:focus, .btn-pro-edit:active:focus {
  outline: none;
  border: 1px solid #2d7edd;
  background-color: #2d7edd;
  color: #ffffff;
}
.pill-nav {
  border: 1px solid #484848;
  border-radius: 20px;
  font-size: 16px;
}
div.pill-nav > a {
  padding-right: 15px;
}
div.pill-nav > a > img {
  margin-top: -5px;
  margin-left: 15px;
  width: 17px;
  height: 17px;
}
.profile-right-col-fill {
  position: relative;
  top: -105px;
  height:85vh;
  border-left: 1px solid #282828;
}
.profile-right-col {
  padding-top: 105px;
}
.profile-spacer {
  padding-top: 65px;
}
div.profile-right-col > ul {
  padding-left: 0;
  list-style-type: none;
}
div.profile-right-col > ul > li > a,
div.profile-right-col > ul > li > button {
  display: block;
  padding: 10px 5px;
  color: #949494;
  text-decoration: none;
}
.btn-social-account {
  display: block;
  padding: 10px 5px;
  color: #949494;
  text-decoration: none;
}
div.profile-right-col > ul > li > a:hover,
div.profile-right-col > ul > li > button:hover {
  border-radius: 4px;
  background-color: #23262a;
  text-decoration: none;
}
.btn-social-account:hover {
  border-radius: 4px;
  background-color: #23262a;
  text-decoration: none;
}
.profile-foot {
  position: relative;
  display: block;
  margin-left: 15px;
  padding-top: 50px;
}
.connections {
  display: inline-block;
  margin-left: 15px;
  width: 32px;
  height: 32px;
  border-radius: 4px;
  background-color: #23262a;
}
div.col-md-3 > img {
  margin-right: 10px;
  width: 32px;
  height: 32px;
  border-radius: 4px;
}
.col-list-name {
  display: table-cell;
  vertical-align: middle;
}
.booklist-wrap {
  display: table;
  overflow: hidden;
}
div.container.outer-wrap {
  padding: 0;
}
/* END UNKNOWN STYLES ///////////////////////////////////// */


.bookmarks-temp {
  padding: 0;
}
.bookmarks-temp > .list-group-item {
  border: none;
  border-radius: 4px;
  background-color: transparent;
}
.bookmarks-temp > .list-group-item {
  color: #fff!important;
  width: 100%;
  display: block;
  border-radius: 3px;
  background-color: #32373d;
  height: 55px;
}



/* 
// Post rhythm 
*/


/* 
// Globals 
*/

html, body {
  background-color: #1b1e21; /* 1b1e21 */
  height: 100%;
  min-width: 768px;
}
button {
  outline: none!important;
}

/* 
// Type 
*/

a, a:focus {
  outline:none;
}
.inverse {
  color: #fff;
  font-weight: 200;
}


/* 
// ID card
*/

.idcard {
  position: relative;
  border: .0625rem solid rgba(229,229,229,1);
  border-radius:.25rem;
}
.idcard-body {
  display: block;
  margin-bottom: 30px;
}
.dim {
  color: #949494;
}
.id-flex img {
  bottom: 0;
  width: 260px;
  height: 371px;
  -webkit-border-radius: 8px;
  border-radius: 8px;
  object-fit: cover;
}
.id-flex {
  bottom: 0;
  display: table-cell;
  width: 260px;
  height: 371px;
  vertical-align: top;
}
.idcard-block {
  display: table-cell;
  width: 100%;
  vertical-align: top;
}
.idcard-name {
  font-weight: 300;
  font-size: 1.25em;
}
.id-social > div > ul {
  margin-top: 5px;
  margin-bottom: 5px;
  margin-left: 15px;
  height: 39px;
  list-style: none;
}
.id-social > div > ul > li a {
  overflow: hidden;
  padding-left: 10px;
  height: 32px;
  color: rgba(255,255,255,1);
  vertical-align: middle;
  text-overflow: ellipsis;
  white-space: nowrap;
  line-height: 32px;
}
i.fa {
  display: inline-block;
  margin-top: 3px;
  margin-right: 5px;
  margin-left: 5px;
  padding: 0 6px;
  text-align: right;
  font-size: 16px;
}
.id-social > div > ul > li a > span {
  padding-left: 5px;
}
.idcard-wrap {
  margin-top: 105px;
  color: rgba(255,255,255,1);
  font-weight: inherit;
}
.overlay {
  position: absolute;
  margin: -371px 0 0 0;
  width: 260px;
  height: 371px;
  -webkit-border-radius: 8px;
  border-radius: 8px;
  background-color: rgba(0,0,0,0.2);
}


/* 
// Browser bar 
*/

.navbar {
  min-width: 768px;
  padding-top: 23px;
  padding-right: 0;
  padding-left: 0;
  height: 90px;
  background-color: rgba(235,235,235,1);
}
.nav-page {
  border: none;
  background-color: transparent;
}
.nav.navbar-nav {
  padding-top: 6px;
  width: 100%;
  border-top: 1px solid #e1e1e1;
}
button.btn.btn-sm.nav-page {
  margin-top: -4px;
  padding-right: 8px; 
  padding-left: 8px;
}
/* browser search bar ---------------------------- */
.nav-search {
  overflow: hidden;
}
.browser-search-bar input {
  padding: .1875rem .75rem;
  border: none;
  color: #7B7B7B;
  text-align: center;
  font-size: .75rem;
  border-radius: 20px;
}
.browser-search-bar input::-webkit-input-placeholder {
  color: #aeaeae;
  text-transform: none;
  margin-top: .1875rem;
  font-size: .75rem;  
  padding: 0;
}
.browser-search-bar input::-webkit-input-placeholder::before {
  font-family: fontAwesome;
  font-size: .6875rem;  
  content:'\f002  ';
  color: #c7c7c7;
}
/* end browser search bar -------------------------- */
/* browser-links */
.browser-links {
  padding-right: 5px;
  padding-left: 30px;
}
.browser-links > div.nav-link {
  padding-top: .3125rem;
}
.browser-links > div.nav-item.nav-link > a {
  display: block;
  margin-right: 5px;
  padding-top: 4px;
  text-decoration: none;
}
.browser-links > div.nav-item.nav-link > a > img {
  display: block;
  margin: 0 auto;
  width: 19px;
  height: 19px;
  margin-bottom: 5px;
}
/* end browser-links */
.back-forth {
  padding-right: 35px;
  padding-left: 15px;
}
.back-forth > div.nav-link {
  padding-top: .0625rem;
}
.icon-labels {
  display: block;
  color: rgba(61,61,61,1);
  font-size: 11px;
}


/* 
// Views 
*/

/* Views 
// Landing view */

/* Extra markup and styles for table-esque vertical and horizontal centering */
.site-wrapper {
  top: 0;
  /*margin-top: -83px;*/
  width: 100%;
  height: 100%;
  /*min-height: 100%; 
  box-shadow: inset 0 0 100px rgba(0,0,0,.5);*/
}
.site-wrapper-inner {
  display: table-cell;
  min-height: 100%;
  vertical-align: top; 
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
}
.cover-container {
  margin-right: auto;
  margin-left: auto;
}
.out-block-wrap {
  width: 576px;
}
.out-block {
  width: 490px;
}
.out-form-group {
  width: 490px;
  margin-left: -80px;
}

/* Views
// Deposit view */

.page-header-wrap {
  width: 100%;
  display: table;
}
.page-header {
  display:table-cell;
  min-width: 100%;
  height: 150px;
  background-color: #1b1e21;
  text-align: center;
  vertical-align: middle;
}
.header-logo {
  position: absolute;
  top: 150px;
}


/* 
// Forms 
*/

/* 
// Inline forms 
*/

/* Sets inline forms to have a fixed label container width */
.form-group-control-label {
    width: 150px;
}

/* controls the alert boxes when signing up */
div.out-form-group > div > div.alert.alert-dismissible {
  margin-left: 178px;
  margin-right: 15px;
}

